[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "An implementation of a DAG on gossip."
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "dag_gossip"
readme = "README.md"
repository = "https://github.com/maqi/dag_gossip"
version = "0.1.0"

[dependencies]
bytes = "~0.4.6"
ed25519-dalek = "~0.6.1"
log = "~0.3.8"
maidsafe_utilities = "~0.15.0"
quick-error = "~1.2.1"
rand = "~0.4.2"
serde = "~1.0.15"
serde_derive = "~1.0.15"
sha3 = "~0.7.2"
unwrap = "~1.1.0"
tiny-keccak = "1.4"

[dev-dependencies]
itertools = "~0.7.6"
